[package]
name = "aleoprove"
version = "0.3.0"
edition = "2021"

[dependencies]
console = "0.15.2"
nvml-wrapper = "0.8.0"
once_cell = "1.16.0"
rand = "0.8.5"
sysinfo = "0.26.8"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/snarkvm-cuda"
features = [
    "cuda",
    "algorithms",
    "curves",
    "fields",
    "utilities",
    "parallel",
]
